--- a/Final/index.html
+++ b/Final/index.html
@@ -112,7 +112,7 @@
                 <div class="col-lg-4">
                     <div class="space">
                         <div class="thumb">
-                            <a href="https://zh.wikipedia.org/zh-tw/%E6%97%A5%E6%9C%88%E6%BD%AD" target="_blank"><img src="assets/images/space-1.jpg"></a>
+                            <a href="https://en.wikipedia.org/wiki/Sun_Moon_Lake" target="_blank"><img src="assets/images/space-1.jpg"></a>
                         </div>
                         <div class="down-content">
                             <h4>Sun Moon Lake</h4>
@@ -123,7 +123,7 @@
                 <div class="col-lg-4">
                     <div class="space">
                         <div class="thumb">
-                            <a href="https://zh.wikipedia.org/zh-tw/%E5%A4%AA%E9%AD%AF%E9%96%A3%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92" target="_blank"><img src="assets/images/space-2.jpg"></a>
+                            <a href="https://en.wikipedia.org/wiki/Taroko_National_Park" target="_blank"><img src="assets/images/space-2.jpg"></a>
                         </div>
                         <div class="down-content">
                             <h4>Taroko National Park</h4>
@@ -134,7 +134,7 @@
                 <div class="col-lg-4">
                     <div class="space">
                         <div class="thumb">
-                            <a href="https://zh.wikipedia.org/zh-tw/%E5%A3%AB%E6%9E%97%E5%A4%9C%E5%B8%82" target="_blank"><img src="assets/images/space-3.jpg"></a>
+                            <a href="https://en.wikipedia.org/wiki/Shilin_Night_Market" target="_blank"><img src="assets/images/space-3.jpg"></a>
                         </div>
                         <div class="down-content">
                             <h4>Shilin Night Market</h4>
